--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-streamlit==1.25.0
-scikit-learn==1.3.2
-joblib==1.2.0
-numpy==1.25.2
-pandas==2.0.3
+streamlit==1.32.0
+scikit-learn==1.5.2
+numpy>=1.26.0
+pandas>=2.2.0
